# cuda-lab

./: .gitignore  .gitmodules  Readme.md  Subject-Part1.md
0-deviceQuery/: CMakeLists.txt
1-Grayscale/: CMakeLists.txt
1-Grayscale/include/: grayscale.hpp
1-Grayscale/src/: reference.cpp
1-Obfuscation/: CMakeLists.txt
1-Obfuscation/data/: big_frag_1.tif  big_frag_2.tif  small_frag_1.tif  small_frag_2.tif
1-Obfuscation/include/: obfuscate.hpp
1-Obfuscation/src/: main.cpp  obfuscate.cu  reference.cpp
2-Convolutions/: CMakeLists.txt  Credits.txt
2-Convolutions/data/: cinque_terre_gold.tiff  cinque_terre_small.tiff
2-Convolutions/include/: compare.h  reference_calc.h  timer.h  utils.h
2-Convolutions/src/: HW2.cpp  compare.cpp  main.cpp  reference_calc.cpp  student_func.cu
assignments/Part_1/: Subject-Part1-en.md  Subject-Part1-fr.md  Subject-Part1.md
assignments/Part_2/: Subject-Part2-en.md  Subject-Part2-fr.md
common/include/: tiffutil.hpp
common/src/: tiffutil.cpp
sources/: Subject-Part0-en.md  Subject-Part0-fr.md  Subject-Part1-en.md  Subject-Part1-fr.md  Subject-Part2-en.md  Subject-Part2-fr.md  update_pdf.sh
